--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: blue;
-  .test {
+  background-color: blue; }
+  body .test {
     background-color: red;
     display: block;
     height: 300px;
@@ -8,6 +8,4 @@ body {
     position: absolute;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
-    width: 300px;
-  }
-}
+    width: 300px; }
