--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,7 +20,7 @@
   {{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
   {{ 'app.js' | asset_url | script_tag }}
 
-  <!-- LOAD OTHER VITAL SHOPIFY ASSETS {% endcomment %} -->
+  <!-- LOAD OTHER VITAL SHOPIFY ASSETS -->
   {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
   {% if template contains 'customers' %}{{ 'customer_area.js'  | shopify_asset_url | script_tag }}{% endif %}
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
