--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -30,7 +30,9 @@
 </head>
 
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
+  <div class="test">
 
+  </div>
   <div class="container">
 
     <header class="row">
