--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,2 @@
 body {
-  background-color: blue; }
-  body .test {
-    background-color: yellow;
-    display: block;
-    height: 300px;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    width: 300px; }
+  background-color: #FFFFFF; }
