--- a/snippets/head.liquid
+++ b/snippets/head.liquid
@@ -10,7 +10,7 @@
 
 <!-- LOAD CUSTOM CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-{{ 'style.css' | asset_url | stylesheet_tag }}
+{{ 'style.scss' | asset_url | stylesheet_tag }}
 
 <!-- LOAD CUSTOM JS AND DEPENDENCIES -->
 {{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
