--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -13,7 +13,7 @@
     {% include 'header' %}
 
     <!-- MAIN BODY -->
-    <div class="container">
+    <div class="container-fluid">
       <div id="main" role="main">
         {{ content_for_layout }}
       </div>
