--- a/snippets/head.liquid
+++ b/snippets/head.liquid
@@ -9,12 +9,10 @@
 {% include 'twitter-card' %}
 
 <!-- LOAD CUSTOM CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 {{ 'style.scss' | asset_url | stylesheet_tag }}
 
 <!-- LOAD CUSTOM JS AND DEPENDENCIES -->
-{{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+{% comment %}{{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}{% endcomment %}
 {{ 'app.js' | asset_url | script_tag }}
 
 <!-- LOAD OTHER VITAL SHOPIFY ASSETS -->
