--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,72 +1,108 @@
-{% assign products_per_page = settings.products_per_row | times: settings.number_of_rows %}
-{% assign numbers = 'zero, one, two, three, four, five, six' | split: ',' %}
-{% assign products_per_row = settings.products_per_row | times: 1 %}
-{% assign products_per_row = numbers[products_per_row] | strip | append: '-per-row' %}
+{%- assign max_height = 250 -%}
 
-{% paginate collection.products by products_per_page %}
+<div class="collection-wrapper">
+  <header class="collection-header">
+    <div class="page-width">
+      <div>
+        <h1>{{ collection.title }}</h1>
+        {% if collection.description != blank %}
+          <div>{{ collection.description }}</div>
+        {% endif %}
+      </div>
+    </div>
+  </header>
 
-<h1>{{ collection.title }}</h1>
+  <div class="grid-wrapper row">
+    {% assign tag_string = '' %}
 
-{% if collection.products_count > 1 %}
-<select class="sort-by right">
-  <option value="manual">Featured</option>
-  <option value="price-ascending">Price: Low to High</option>
-  <option value="price-descending">Price: Hight to Low</option>
-  <option value="title-ascending">A-Z</option>
-  <option value="title-descending">Z-A</option>
-  <option value="created-ascending">Oldest to Newest</option>
-  <option value="created-descending">Newest to Oldest</option>
-  <option value="best-selling">Best Selling</option>
- </select>
-{% endif %}
+    {% comment %} ************* {% endcomment %}
+    {% comment %} GROUPING LOOP {% endcomment %}
+    {% comment %} ************* {% endcomment %}
+    {% for tag in collection.all_tags %}
+      {% if tag contains 'style' %}
+        {% unless tag_string contains tag %}
+          {% paginate collection.products by 1000 %}
+            {% for product in collection.products %}
+              {% if product.tags contains tag %}
+                  <div class="product-wrapper{% unless product.available %} sold-out{% endunless %} col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <a href="{{ product.url }}">
+                      {% capture img_id %}ProductCardImage-{{ product.id }}{% endcapture %}
+                      {% capture wrapper_id %}ProductCardImageWrapper-{{ product.id }}{% endcapture %}
+                      {%- assign img_url = product.featured_image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
 
-{% if collection.all_tags.size > 0 %}
-<ul>
-  <li class="{% unless current_tags %} active{% endunless %}">
-    {{ 'All' | link_to_remove_tag: current_tags.first }}
-  </li>
-  {% for tag in collection.all_tags %}
-  {% if current_tags contains tag %}
-  <li class="active">
-    {{ tag | link_to_remove_tag: tag }}
-  </li>
-  {% else %}
-  <li>
-    {{ tag | link_to_tag: tag }}
-  </li>
-  {% endif %}
-  {% endfor %}
-</ul>
-{% endif %}
+                      <div class="featured-image-wrapper">
+                        <img src="{{ product.featured_image.src | img_url: '200x' }}">
+                      </div>
 
-{% if collection.description.size > 0 %}
-<div>
-  {{ collection.description }}
+                      <div class="product-title-wrapper">
+                        <div class="product-title">
+                          <p class="h4">{{ product.title }}</p>
+                        </div>
+                        <div class="product-price">
+                          {%- assign compare_at_price = product.compare_at_price -%}
+                          {%- assign price = product.price -%}
+                          {%- assign price_varies = product.price_varies -%}
+                          {%- assign available = product.available -%}
+                          {%- assign money_price = price | money -%}
+
+                          <p>
+                            {% if compare_at_price > price %}
+                              {% if price_varies %}
+                                <span class="visually-hidden">Price</span>
+                                <s class="price">{{ compare_at_price | money }}</s>
+                                <span class="sale-price">
+                                  {{ money_price }}
+                                  <span class="sale-price-label">Sale Price</span>
+                                </span>
+                              {% else %}
+                                <span class="visually-hidden">{{ 'Price' }}</span>
+                                <s class="price">{{ compare_at_price | money }}</s>
+                                <span class="sale-price">
+                                  {{ money_price }}
+                                  <span class="sale-price-label">Sale Price</span>
+                                </span>
+                              {% endif %}
+                            {% else %}
+
+                              {% if price_varies %}
+                                <span class="price">{{ money_price }}</span>
+                              {% else %}
+                                <span class="visually-hidden">{{ 'Price' }}</span>
+                                <span class="price">{{ money_price }}</span>
+                              {% endif %}
+                            {% endif %}
+
+                            {% unless available %}
+                              <span class="sold-out">Sold Out</span>
+                            {% endunless %}
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                {% break %}
+              {% endif %}
+            {% endfor %}
+          {% endpaginate %}
+        {% endunless %}
+
+        {% if tag_string == '' %}
+          {% assign tag_string = tag_string | append: tag %}
+        {% else %}
+          {% assign tag_string = tag_string |append: ',' | append: tag %}
+        {% endif %}
+
+      {% endif %}
+    {% endfor %}
+    {% comment %} ***************** {% endcomment %}
+    {% comment %} END GROUPING LOOP {% endcomment %}
+    {% comment %} ***************** {% endcomment %}
+
+    {% if is_empty_collection %}
+      <div class="no-matching-products">
+        <p>No products in this collection</p>
+      </div>
+    {% endif %}
+
+  </div>
 </div>
-{% endif %}
-
-<ul>
-{% for product in collection.products %}
-  {% include 'product-grid-item' with products_per_row %}
-{% else %}
-  <p>There are no products in this view.</p>
-{% endfor %}
-</ul>
-
-{% if paginate.pages > 1 %}
-<div>
-  {{ paginate | default_pagination }}
-</div>
-{% endif %}
-
-{% endpaginate %}
-
-
-<script>
-jQuery('.sort-by')
-  .val('{{ collection.sort_by | default: collection.default_sort_by }}')
-  .on('change', function() {
-    Shopify.queryParams.sort_by = jQuery(this).val();
-    location.search = jQuery.param(Shopify.queryParams).replace(/\+/g, '%20');
-  });
-</script>
