--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,13 +1,8 @@
-{% assign add_to_cart = 'Add to cart' %}
-{% assign sold_out = 'Sold Out' %}
-{% assign unavailable = 'Unavailable' %}
-
-<div class="product" itemscope itemtype="http://schema.org/Product">
-
+<div class="product-wrapper" itemscope itemtype="http://schema.org/Product">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}" />
   <meta itemprop="image" content="{{ product | img_url: 'grande' }}" />
+  <form action="/cart/add" method="post" enctype="multipart/form-data" class="product-form">
 
-  <form action="/cart/add" method="post" enctype="multipart/form-data">
     <div class="product-photos">
       {% if product.images.size == 0 %}
         <div class="product-photo-container">
@@ -16,17 +11,13 @@
       {% else %}
         {% assign featured_image = product.selected_or_first_available_variant.featured_image | default: product.featured_image %}
         <div class="product-photo-container">
-          <a href="{{ featured_image | img_url: 'master' }}">
-            <img src="{{ featured_image | img_url: 'master' }}" alt="{{ product.title | escape }}" />
-          </a>
+          <img src="{{ featured_image | img_url: '300x' }}" alt="{{ product.title | escape }}" />
         </div>
         {% if product.images.size > 1 %}
           <ul class="product-photo-thumbs">
             {% for image in product.images %}
             <li class="product-photo-thumb">
-              <a href="{{ image | img_url: 'medium' }}">
-                <img src="{{ image | img_url: 'medium' }}" alt="{{ image.alt | escape }}" />
-              </a>
+              <img src="{{ image | img_url: '300x' }}" alt="{{ image.alt | escape }}" />
             </li>
             {% endfor %}
           </ul>
@@ -36,14 +27,6 @@
 
     <div class="product-details">
       <h1 itemprop="name">{{ product.title }}</h1>
-
-      {% assign product_vendor_handle = product.vendor | handle %}
-      {% if collections[product_vendor_handle].handle == product_vendor_handle %}
-        {% assign vendor_url = collections[product_vendor_handle].url %}
-      {% else %}
-        {% assign vendor_url = product.vendor | url_for_vendor %}
-      {% endif %}
-      <h2 itemprop="brand">{{ product.vendor | link_to: vendor_url }}</h2>
 
       <div id="product-description" itemprop="description">
         {{ product.description }}
@@ -74,6 +57,8 @@
         {% assign hide_default_title = true %}
       {% endif %}
 
+      {% section 'color-manager' %}
+
       {% comment %} LOOPING THROUGH VARIANTS {% endcomment %}
       <div id="product-variants" class="{% if hide_default_title %} hidden{% endif %}">
         <select id="product-select" name="id">
@@ -84,102 +69,24 @@
           {% endfor %}
         </select>
       </div>
+    </div>
 
-      <div id="backorder" class="hidden">
-        <p>{{ '%s is back-ordered. We will ship it separately in 10 to 15 days.' | replace: '%s', '<span id="selected-variant"></span>' }}</p>
-      </div>
+    <div class="quantity-wrapper">
+      <label for="Quantity">Quantity</label>
+      <input type="number" id="Quantity" name="quantity" value="1" min="1" pattern="[0-9]*">
+    </div>
 
-      <div id="product-add">
-        <input type="submit" name="add" id="add" class="primary button" value="{{ add_to_cart | escape }}">
-      </div>
-
-      {% if collection %}
-        {% if collection.previous_product or collection.next_product %}
-        <div>
-        {% if collection.previous_product %}
-          {% capture prev_url %}{{ collection.previous_product}}#content{% endcapture %}
-          <span>{{ '&larr; Previous Product' | link_to: prev_url }}</span>
-        {% endif %}
-        {% if collection.next_product %}
-          {% capture next_url %}{{ collection.next_product}}#content{% endcapture %}
-          <span>{{ 'Next Product &rarr;' | link_to: next_url }}</span>
-        {% endif %}
-        </div>
-        {% endif %}
-      {% endif %}
-
-    </div><!-- .product-details -->
-
+    <div class="submit-wrapper">
+      <button type="submit" name="add" id="AddToCart" {% unless current_variant.available %}disabled="disabled"{% endunless %} class="button">
+        <span id="AddToCartText">
+          {% unless current_variant.available %}
+            Sold Out
+          {% else %}
+            Add To Cart
+          {% endunless %}
+        </span>
+      </button>
+    </div>
   </form>
 
 </div>
-
-{% comment %}
-  Adding support for product options. See here for details:
-  http://docs.shopify.com/support/your-website/themes/can-i-make-my-theme-use-products-with-multiple-options
-{% endcomment %}
-
-<script>
-
-var selectCallback = function(variant, selector) {
-
-  if (variant) {
-
-    // Swap image.
-    if (variant.featured_image) {
-      var newImage = variant.featured_image; // New image object.
-      var mainImageDomEl = jQuery('.product-photo-container img')[0]; // DOM element of main image we need to swap.
-      Shopify.Image.switchImage(newImage, mainImageDomEl, switchImage); // Define switchImage (the callback) in your theme's JavaScript file.
-    }
-
-    // Selected a valid variant that is available.
-    if (variant.available) {
-
-      // Enabling add to cart button.
-      jQuery('#add').removeClass('disabled').prop('disabled', false).val({{ add_to_cart | json }});
-
-      // If item is backordered yet can still be ordered, we'll show special message.
-      if (variant.inventory_management && variant.inventory_quantity <= 0) {
-        jQuery('#selected-variant').html({{ product.title | json }}{% unless hide_default_title %} + ' - ' + variant.title{% endunless %});
-        jQuery('#backorder').removeClass("hidden");
-      } else {
-        jQuery('#backorder').addClass("hidden");
-      }
-
-    } else {
-      // Variant is sold out.
-      jQuery('#backorder').addClass('hidden');
-      jQuery('#add').val({{ sold_out | json }}).addClass('disabled').prop('disabled', true);
-    }
-
-    // Whether the variant is in stock or not, we can update the price and compare at price.
-    if ( variant.compare_at_price > variant.price ) {
-      jQuery('#product-price').html('<span class="product-price on-sale">'+ Shopify.formatMoney(variant.price, "{{ shop.money_format }}") +'</span>'+'&nbsp;<s class="product-compare-price">'+Shopify.formatMoney(variant.compare_at_price, "{{ shop.money_format }}")+ '</s>');
-    } else {
-      jQuery('#product-price').html('<span class="product-price">'+ Shopify.formatMoney(variant.price, "{{ shop.money_format }}") + '</span>' );
-    }
-
-  } else {
-    // variant doesn't exist.
-    jQuery('#product-price').empty();
-    jQuery('#backorder').addClass('hidden');
-    jQuery('#add').val({{ unavailable | json }}).addClass('disabled').prop('disabled', true);
-  }
-
-};
-
-jQuery(function($) {
-
-  new Shopify.OptionSelectors('product-select', { product: {{ product | json }}, onVariantSelected: selectCallback, enableHistoryState: true });
-
-  // Add label if only one product option and it isn't 'Title'.
-  {% if product.options.size == 1 and product.options.first != 'Title' %}
-    $('.selector-wrapper:eq(0)').prepend('<label>{{ product.options.first }}</label>');
-  {% endif %}
-
-});
-
-Shopify.Image.preload({{ product.images | json }}, 'grande');
-Shopify.Image.preload({{ product.images | json }}, '1024x1024');
-
-</script>
