--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,6 @@
 // IMPORT ALL STYLES HERE FOR IMPORT ONCE IN SRC/JS/APP.JS
 @import './global/variables';
+@import './vendor/gridX';
+
 @import './global/fonts';
 @import './global/global';
