included snippets for AjaxCart

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -504,3 +504,15 @@
 
 body {
   background-color: #FFFFFF; }
+
+.cart-drawer {
+  border-left: 1px black solid;
+  height: 100vh;
+  padding: 0 24px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 25%;
+  z-index: 1; }
+  .cart-drawer .pointer {
+    cursor: pointer; }
