--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,6 +8,7 @@
 
   <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
     <!-- MODALS -->
+    {% include 'cart-drawer' %}
 
     <!-- HEADER -->
     {% include 'header' %}
