importing bootstrap as .scss

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,7 +2,7 @@
 <!--[if IE 9]> <html class="ie9 no-js supports-no-cookies" lang="{{ shop.locale }}"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js supports-no-cookies" lang="{{ shop.locale }}"> <!--<![endif]-->
   <head>
-    {% section 'head' %}
+    {% include 'head' %}
     {{ content_for_header }}
   </head>
 
