--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -6,15 +6,23 @@ $lg-break: 1200px;
 $half-gutter-size: 12px;
 $gutter-size: 24px;
 
-$columns: {{ settings.the_cols }};
+$columns: {{ settings.columns }};
 
 
 
 $black: #000000;
+$grey: lighten($black, 50%);
 $white: #FFFFFF;
 
 
 $base-font-size: 16px;
+* {
+  outline: 0;
+  &:active, &:focus, &:hover {
+    outline: 0;
+  }
+}
+
 body {
   background-color: $white;
 }
@@ -30,5 +38,15 @@ body {
   z-index: 1;
   .pointer {
     cursor: pointer;
+  }
+}
+.navbar {
+  .icon-link {
+    display: flex;
+    svg {
+      height: 2.25em;
+      padding: 0.5em;
+      width: auto;
+    }
   }
 }
