webpack rewrite, loader rename, loader updates

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,4 @@
-@import './global/_variables.scss';
-@import './global/_global.scss';
+@import 'global/_variables.scss';
+@import 'global/_global.scss';
 
-@import './layout/_header.scss'
+@import 'layout/_header.scss'
