--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -9,16 +9,8 @@ body {
   background-color: $white;
 }
 
-.cart-drawer {
-  border-left: 1px black solid;
-  height: 100vh;
-  padding: 0 24px;
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 25%;
-  z-index: 1;
-  .pointer {
-    cursor: pointer;
+.form-inline {
+  input, button {
+    border: none;
   }
 }
