--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,10 +1,96 @@
-.navbar {
-  .icon-link {
-    display: flex;
-    svg {
-      height: 2.25em;
-      padding: 0.5em;
-      width: auto;
+.nav-icon-link {
+  display: flex;
+  svg {
+    fill: $white;
+    height: 2.25em;
+    padding: 0.5em;
+    width: auto;
+    path {
+      fill: $white;
+    }
+  }
+}
+
+.search-account-cart-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  .form-inline {
+    button {
+      padding: 0;
+      svg {
+        fill: $white;
+        height: 2.25em;
+        padding: 0.5em;
+        path {
+          fill: $white;
+        }
+      }
+    }
+  }
+  &.dark {
+    .form-inline {
+      button {
+        padding: 0;
+        svg {
+          fill: $brand-inverse;
+          path {
+            fill: $brand-inverse;
+          }
+        }
+      }
+    }
+    .nav-icon-link {
+      display: flex;
+      svg {
+        fill: $brand-inverse;
+        height: 2.25em;
+        padding: 0.5em;
+        width: auto;
+        path {
+          fill: $brand-inverse;
+        }
+      }
+    }
+  }
+}
+
+.announcement-bar {
+  background-color: $brand-primary;
+  > a, p {
+    color: $white;
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+  p {
+    margin: 0;
+    padding: 0.5rem 0;
+  }
+}
+
+.secodary-header {
+  background-color: $brand-inverse;
+  text-align: right;
+  .secondary-nav {
+    .nav {
+      .nav-item {
+        .nav-link {
+          color: $white;
+        }
+      }
+    }
+  }
+}
+
+.primary-header {
+  .primary-nav {
+    .navbar-brand {
+      a {
+        img {
+          height: 3rem;
+        }
+      }
     }
   }
 }
