--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -1,22 +1,31 @@
-$sm-break: 768px;
-$md-break: 991px;
-$lg-break-down: 1199px;
-$lg-break: 1200px;
-
-$half-gutter-size: 12px;
-$gutter-size: 24px;
-
-$columns: {{ settings.columns }};
-
-
-
-$black: #000000;
-$grey: lighten($black, 50%);
-$white: #FFFFFF;
-
-
 $base-font-size: 16px;
 
+// Start with assigning color names to specific hex values.
+$white:  #fff !default;
+$black:  #000 !default;
+$red:    #d9534f !default;
+$orange: #f0ad4e !default;
+$yellow: #ffd500 !default;
+$green:  #5cb85c !default;
+$blue:   #0275d8 !default;
+$teal:   #5bc0de !default;
+$pink:   #ff5b77 !default;
+$purple: #613d7c !default;
+
+// Create grayscale
+$gray-dark:                 #292b2c !default;
+$gray:                      #464a4c !default;
+$gray-light:                #636c72 !default;
+$gray-lighter:              #eceeef !default;
+$gray-lightest:             #f7f7f9 !default;
+
+// Reassign color vars to semantic color scheme
+$brand-primary:             $blue !default;
+$brand-success:             $green !default;
+$brand-info:                $teal !default;
+$brand-warning:             $orange !default;
+$brand-danger:              $red !default;
+$brand-inverse:             $gray-dark !default;
 * {
   outline: 0;
   &:active, &:focus, &:hover {
@@ -28,27 +37,104 @@ body {
   background-color: $white;
 }
 
-.cart-drawer {
-  border-left: 1px black solid;
-  height: 100vh;
-  padding: 0 24px;
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 25%;
-  z-index: 1;
-  .pointer {
-    cursor: pointer;
+.form-inline {
+  input, button {
+    border: none;
+  }
+}
+.nav-icon-link {
+  display: flex;
+  svg {
+    fill: $white;
+    height: 2.25em;
+    padding: 0.5em;
+    width: auto;
+    path {
+      fill: $white;
+    }
   }
 }
 
-.navbar {
-  .icon-link {
-    display: flex;
-    svg {
-      height: 2.25em;
-      padding: 0.5em;
-      width: auto;
+.search-account-cart-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  .form-inline {
+    button {
+      padding: 0;
+      svg {
+        fill: $white;
+        height: 2.25em;
+        padding: 0.5em;
+        path {
+          fill: $white;
+        }
+      }
+    }
+  }
+  &.dark {
+    .form-inline {
+      button {
+        padding: 0;
+        svg {
+          fill: $brand-inverse;
+          path {
+            fill: $brand-inverse;
+          }
+        }
+      }
+    }
+    .nav-icon-link {
+      display: flex;
+      svg {
+        fill: $brand-inverse;
+        height: 2.25em;
+        padding: 0.5em;
+        width: auto;
+        path {
+          fill: $brand-inverse;
+        }
+      }
+    }
+  }
+}
+
+.announcement-bar {
+  background-color: $brand-primary;
+  > a, p {
+    color: $white;
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+  p {
+    margin: 0;
+    padding: 0.5rem 0;
+  }
+}
+
+.secodary-header {
+  background-color: $brand-inverse;
+  text-align: right;
+  .secondary-nav {
+    .nav {
+      .nav-item {
+        .nav-link {
+          color: $white;
+        }
+      }
+    }
+  }
+}
+
+.primary-header {
+  .primary-nav {
+    .navbar-brand {
+      a {
+        img {
+          height: 3rem;
+        }
+      }
     }
   }
 }
